US585006: A new API to check status of the batch
https://internal.almoctane.com/ui/entity-navigation?p=131002/6001&entityType=work_item&id=585006
