# staging-service/src/main/java/com/github/cafdataprocessing/services/staging/StagingController.java
@@ -132,6 +132,29 @@ public class StagingController implements StagingApi
         }
     }
 
+    @Override
+    public ResponseEntity<StatusResponse> getBatchStatus(
+            @ApiParam(value = "Identifies the tenant making the request.", required = true)
+            @RequestHeader(value = "X-TENANT-ID", required = true) String X_TENANT_ID,
+            @ApiParam(value = "Identifies the batch.", required = true)
+            @RequestParam("batchId") String batchId) {
+        final StatusResponse status = new StatusResponse();
+        try {
+            String statusResponse = batchDao.getBatchStatus(new TenantId(X_TENANT_ID), new BatchId(batchId));
+            status.setMessage(statusResponse);
+            return ResponseEntity.ok().contentType(MediaType.APPLICATION_JSON).body(status);
+        } catch (InvalidTenantIdException | InvalidBatchIdException ex){
+            LOGGER.error("Invalid X-TENANT-ID or Invalid Batch Id", ex);
+            throw new WebMvcHandledRuntimeException(HttpStatus.BAD_REQUEST, ex.getMessage());
+        } catch (final BatchNotFoundException ex) {
+            LOGGER.error("Batch not found.", ex);
+            throw new WebMvcHandledRuntimeException(HttpStatus.NOT_FOUND, ex.getMessage());
+        } catch (StagingException ex) {
+            LOGGER.error("Internal server error.", ex);
+            throw new WebMvcHandledRuntimeException(HttpStatus.INTERNAL_SERVER_ERROR, ex.getMessage());
+        }
+    }
+
     public ResponseEntity<BatchList> getBatches(
         @ApiParam(value = "Identifies the tenant making the request.", required = true)
         @RequestHeader(value = "X-TENANT-ID", required = true) String X_TENANT_ID,
